Change to seperate me config file

--- a/wildduck/templates/haraka/configmap.yaml
+++ b/wildduck/templates/haraka/configmap.yaml
@@ -589,6 +589,8 @@ data:
     re_bogus_ip=^(?:0\.0\.0\.0|255\.255\.255\.255|127\.)
   max_unrecognized_commands: |-
     10
+  me: |-
+    {{ .Values.haraka.hostname }}
   messagesniffer.ini: |-
     ;port=9001
     ;tmpdir=/tmp
@@ -872,7 +874,6 @@ data:
     negative = -
     neutral = /'
   smtp.ini: |-
-    me: {{ .Values.haraka.hostname }}
     ; address to listen on (default: all IPv6 and IPv4 addresses, port 25)
     ; use "[::0]:25" to listen on IPv6 and IPv4 (not all OSes)
     ;listen=[::0]:25
