--- a/wildduck/templates/wildduck/ingress.yaml
+++ b/wildduck/templates/wildduck/ingress.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.wildduck.ingress.enabled -}}
-{{- $fullName := include "wildduck.fullname" . -}}
+{{- $fullName := include "wildduck.wildduck.fullname" . -}}
 {{- $svcPort := .Values.wildduck.service.port -}}
 {{- if and .Values.wildduck.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
   {{- if not (hasKey .Values.wildduck.ingress.annotations "kubernetes.io/ingress.class") }}
@@ -17,7 +17,7 @@ kind: Ingress
 metadata:
   name: {{ $fullName }}
   labels:
-    {{- include "wildduck.labels" . | nindent 4 }}
+    {{- include "wildduck.wilduck.labels" . | nindent 4 }}
   {{- with .Values.wildduck.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
