--- a/wildduck/values.yaml
+++ b/wildduck/values.yaml
@@ -127,6 +127,8 @@ wildduck:
     authEnabled: false
     username:
     password:
+    usernameZoneMta:
+    passwordZoneMta:
 
 webmail:
   name: "webmail"
