--- a/wildduck/templates/wildduck/configmap.yaml
+++ b/wildduck/templates/wildduck/configmap.yaml
@@ -237,9 +237,9 @@ data:
     # Optional database name or connection url for ZoneMTA queue database. This is
     # used to push outbound emails to the sending queue
     {{ if .Values.wildduck.mongo.authEnabled }}
-    mongo="mongodb://{{ .Values.wildduck.mongo.usernameZoneMta }}:{{ .Values.wildduck.mongo.passwordZoneMta }}@{{ .Values.wildduck.mongo.host }}:{{ .Values.wildduck.mongo.port }}/zone-mta"
+    sender="mongodb://{{ .Values.wildduck.mongo.usernameZoneMta }}:{{ .Values.wildduck.mongo.passwordZoneMta }}@{{ .Values.wildduck.mongo.host }}:{{ .Values.wildduck.mongo.port }}/zone-mta"
     {{ else }}
-    mongo="mongodb://{{ .Values.wildduck.mongo.host }}:{{ .Values.wildduck.mongo.port }}/zone-mta"
+    sender="mongodb://{{ .Values.wildduck.mongo.host }}:{{ .Values.wildduck.mongo.port }}/zone-mta"
     {{ end }}
 
     #queued="mail"
