--- a/wildduck/templates/haraka/configmap.yaml
+++ b/wildduck/templates/haraka/configmap.yaml
@@ -805,20 +805,16 @@ data:
     ; set to zero to disable pools
     ; pool_concurrency_max=0
   plugins: |-
-    spf
-    dkim_verify
-    access
-
+    # WildDuck plugin handles recipient checking and queueing
+    wildduck
     ## ClamAV is disabled by default. Make sure freshclam has updated all
     ## virus definitions and clamav-daemon has successfully started before
     ## enabling it.
     #clamd
 
-    rspamd
-    tls
-
-    # WildDuck plugin handles recipient checking and queueing
-    wildduck
+    {{- range .Values.haraka.plugins}}
+    {{ . }}
+    {{- end}}
   rabbitmq.ini: |-
     [rabbitmq]
     exchangeName  = emailMessages
