--- a/wildduck/templates/wildduck/configmap.yaml
+++ b/wildduck/templates/wildduck/configmap.yaml
@@ -268,13 +268,8 @@ data:
     # are not encrypted and stored as cleartext. Once set up do not change these values,
     # otherwise decrypting DKIM keys is going to fail
 
-    {{ if .Values.wildduck.dkim.enabled }}
-    cipher="{{ .Values.wildduck.dkim.cipher}}"
-    secret="{{ .Values.wildduck.dkim.secret }}"
-    {{ else }}
-    #cipher="aes192"
-    #secret="a secret cat"
-    {{ end}}
+    cipher="{{ .Values.dkim.cipher}}"
+    secret="{{ .Values.dkim.secret }}"
 
     # If true then spwans openssl command line executable for generating DKIM keys
     # Otherwise forge library is used which is cross-environment but slower
@@ -284,7 +279,7 @@ data:
 
     # If true then also adds a signature for the outbound domain
     # Affects WildDuck ZoneMTA plugin only
-    signTransportDomain=false
+    signTransportDomain={{ .Values.dkim.enabled }}
 
     # do not change this
     hashAlgo="sha256"
