--- a/wildduck/values.yaml
+++ b/wildduck/values.yaml
@@ -43,7 +43,7 @@ wildduck:
 
   image:
     repository: nodemailer/wildduck
-    pullPolicy: IfNotPresent
+    pullPolicy: Always
     # Overrides the image tag whose default is the chart appVersion.
     tag: ""
 
@@ -250,23 +250,6 @@ haraka:
     type: LoadBalancer
     port: 25
 
-  ingress:
-    enabled: false
-    className: ""
-    annotations:
-      {}
-      # kubernetes.io/ingress.class: nginx
-      # kubernetes.io/tls-acme: "true"
-    hosts:
-      - host: webmail.local
-        paths:
-          - path: /
-            pathType: ImplementationSpecific
-    tls: []
-    #  - secretName: chart-example-tls
-    #    hosts:
-    #      - chart-example.local
-
   resources:
     {}
     # We usually recommend not to specify default resources and to leave this as a conscious
@@ -338,23 +321,6 @@ zonemta:
   service:
     type: LoadBalancer
     port: 587
-
-  ingress:
-    enabled: false
-    className: ""
-    annotations:
-      {}
-      # kubernetes.io/ingress.class: nginx
-      # kubernetes.io/tls-acme: "true"
-    hosts:
-      - host: webmail.local
-        paths:
-          - path: /
-            pathType: ImplementationSpecific
-    tls: []
-    #  - secretName: chart-example-tls
-    #    hosts:
-    #      - chart-example.local
 
   resources:
     {}
