--- a/wildduck/values.yaml
+++ b/wildduck/values.yaml
@@ -130,6 +130,71 @@ wildduck:
     usernameZoneMta:
     passwordZoneMta:
 
+haproxy:
+  name: "haproxy"
+  replicaCount: 1
+
+  tlsDomain: example.com
+
+  image:
+    repository: haproxytech/haproxy-alpine
+    pullPolicy: Always
+    # Overrides the image tag whose default is the chart appVersion.
+    tag: ""
+
+  imagePullSecrets: []
+  nameOverride: ""
+  fullnameOverride: ""
+
+  podAnnotations: {}
+
+  podSecurityContext:
+    {}
+    # fsGroup: 2000
+
+  securityContext:
+    {}
+    # capabilities:
+    #   drop:
+    #   - ALL
+    # readOnlyRootFilesystem: true
+    # runAsNonRoot: true
+    # runAsUser: 1000
+
+  service:
+    smtpsType: LoadBalancer
+    smtpsPort: 587
+    imapsType: LoadBalancer
+    imapsPort: 993
+    pop3sType: LoadBalancer
+    pop3sPort: 995
+
+  resources:
+    {}
+    # We usually recommend not to specify default resources and to leave this as a conscious
+    # choice for the user. This also increases chances charts run on environments with little
+    # resources, such as Minikube. If you do want to specify resources, uncomment the following
+    # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+    # limits:
+    #   cpu: 100m
+    #   memory: 128Mi
+    # requests:
+    #   cpu: 100m
+    #   memory: 128Mi
+
+  autoscaling:
+    enabled: false
+    minReplicas: 1
+    maxReplicas: 100
+    targetCPUUtilizationPercentage: 80
+    # targetMemoryUtilizationPercentage: 80
+
+  nodeSelector: {}
+
+  tolerations: []
+
+  affinity: {}
+
 webmail:
   name: "webmail"
   replicaCount: 1
