--- a/wildduck/templates/haproxy/service.yaml
+++ b/wildduck/templates/haproxy/service.yaml
@@ -1,13 +1,21 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{include "wildduck.duckyapi.fullname" .}}
-  labels: {{- include "wildduck.duckyapi.labels" . | nindent 4}}
+  name: {{include "wildduck.haproxy.fullname" .}}
+  labels: {{- include "wildduck.haproxy.labels" . | nindent 4}}
 spec:
-  type: {{.Values.duckyapi.service.type}}
+  type: {{.Values.haproxy.service.smtpsType }}
   ports:
-    - port: {{.Values.duckyapi.service.port}}
-      targetPort: http
+    - port: {{.Values.haproxy.service.smtpsPort }}
+      targetPort: smtps
       protocol: TCP
-      name: http
-  selector: {{- include "wildduck.duckyapi.selectorLabels" . | nindent 4}}
+      name: smtps
+    - port: {{.Values.haproxy.service.imapsPort }}
+      targetPort: imaps
+      protocol: TCP
+      name: imaps
+    - port: {{.Values.haproxy.service.pop3sPort }}
+      targetPort: pop3s
+      protocol: TCP
+      name: pop3s
+  selector: {{- include "wildduck.haproxy.selectorLabels" . | nindent 4}}
