Fix using tlsDomain

--- a/wildduck/templates/haproxy/certificate.yaml
+++ b/wildduck/templates/haproxy/certificate.yaml
@@ -1,12 +1,12 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: {{ include "wildduck.haproxy.tldDomain" . }}-wilduck-certificate
+  name: {{ .Values.haproxy.tlsDomain }}-wilduck-certificate
   labels:
     {{- include "wildduck.haproxy.labels" . | nindent 4 }}
 spec:
   dnsNames:
-    - {{.Values.haproxy.tlsDomain }}
+    - {{ .Values.haproxy.tlsDomain }}
   issuerRef:
     group: cert-manager.k8s.cloudflare.com
     kind: ClusterIssuer
