--- a/wildduck/templates/haproxy/deployment.yaml
+++ b/wildduck/templates/haproxy/deployment.yaml
@@ -66,7 +66,7 @@ spec:
             name: {{ include "wildduck.haproxy.fullname" . }}-configmap
         - name: {{ include "wildduck.haproxy.fullname" . }}-cert-volume
           secret:
-            secretName: {{ include "wildduck.haproxy.tlsDomain" . }}-wildduck-certificate
+            secretName: {{ .Values.haproxy.tlsDomain }}-wildduck-certificate
       {{- with .Values.haproxy.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
