--- a/wildduck/templates/haproxy/deployment.yaml
+++ b/wildduck/templates/haproxy/deployment.yaml
@@ -36,13 +36,13 @@ spec:
           ports:
             - name: smtps
               containerPort: {{.Values.haproxy.service.smtpsPort }}
-              protocol: smtps
+              protocol: tcp
             - name: imaps
               containerPort: {{.Values.haproxy.service.imapsPort }}
-              protocol: imaps
+              protocol: tcp
             - name: pop3s
               containerPort: {{.Values.haproxy.service.pop3sPort }}
-              protocol: pop3s
+              protocol: tcp
           # livenessProbe:
           #   httpGet:
           #     path: /
