--- a/wildduck/templates/haproxy/configmap.yaml
+++ b/wildduck/templates/haproxy/configmap.yaml
@@ -17,11 +17,12 @@ data:
       default_backend imap.backend
 
     backend smtp.backend
-      server haraka wildduck-haraka-service.wildduck.svc.cluster.local:25
+      server haraka wildduck-haraka.wildduck.svc.cluster.local:25
 
     backend pop3.backend
       server imap wildduck-pop3-service.wildduck.svc.cluster.local:110
 
     backend imap.backend
       server imap wildduck-imap-service.wildduck.svc.cluster.local:143
+
 
