--- a/wildduck/templates/wildduck/configmap.yaml
+++ b/wildduck/templates/wildduck/configmap.yaml
@@ -291,8 +291,8 @@ data:
 
     # Use `true` for port 993 and `false` for 143. If connection is not secured
     # on connection then WildDuck enables STARTTLS extension
-    secure=false
-
+    secure= {{ .Values.tls.enabled }}
+ 
     # Max size for messages uploaded via APPEND
     maxMB=25
 
@@ -312,7 +312,7 @@ data:
     disableRetention=false
 
     # If true, then disables STARTTLS support
-    disableSTARTTLS=true
+    disableSTARTTLS={{ if eq .Values.tls.enabled "true" }}false{{ else }}true{{ end }}
 
     # If true, then advertises COMPRESS=DEFLATE capability
     enableCompression=false
@@ -350,8 +350,10 @@ data:
 
     [tls]
     ## If certificate path is not defined, use global or built-in self-signed certs
-    #key="/path/to/server/key.pem"
-    #cert="/path/to/server/cert.pem"
+    {{ if eq .Values.tls.enabled "true" }}
+    key="/opt/certs/tls.key"
+    cert="/opt/certs/tls.crt"
+    {{  end }}
 
     ## You can also define extra options for specific TLS settings:
 
@@ -382,7 +384,7 @@ data:
     maxMB=25
 
     # If true then disables STARTTLS usage
-    disableSTARTTLS=true
+    disableSTARTTLS={{ if eq .Values.tls.enabled "true" }}false{{ else }}true{{ end }}
 
     # Greeting message for connecting client
     banner="Welcome to WildDuck Mail Server"
@@ -392,8 +394,10 @@ data:
 
     [tls]
     # If certificate path is not defined, use global or built-in self-signed certs for STARTTLS
-    #key="/path/to/server/key.pem"
-    #cert="/path/to/server/cert.pem"
+    {{ if eq .Values.tls.enabled "true" }}
+    key="/opt/certs/tls.key"
+    cert="/opt/certs/tls.crt"
+    {{  end }}
   pop3.toml: |-
     # If enabled then WildDuck exposes a limited POP3 interface for listing and fetching emails
     enabled=true
@@ -402,10 +406,10 @@ data:
     host="0.0.0.0"
 
     # If true, then disables STARTTLS support
-    disableSTARTTLS=true
+    disableSTARTTLS={{ if eq .Values.tls.enabled "true" }}false{{ else }}true{{ end }}
 
     # Use `true` for port 995 and `false` for 110
-    secure=false
+    secure={{ .Values.tls.enabled }}
 
     # If true, then do not show server info in CAPA response
     disableVersionString=false
@@ -428,8 +432,10 @@ data:
 
     [tls]
     # If certificate path is not defined, use global or built-in self-signed certs
-    #key="/path/to/server/key.pem"
-    #cert="/path/to/server/cert.pem"
+    {{ if eq .Values.tls.enabled "true" }}
+    key="/opt/certs/tls.key"
+    cert="/opt/certs/tls.crt"
+    {{  end }}
 
     [setup]
     # Public configuration for POP3
