--- a/wildduck/templates/wildduck/certificate.yaml
+++ b/wildduck/templates/wildduck/certificate.yaml
@@ -1,7 +1,7 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: {{ .Values.wildduck.tlsDomain }}-wilduck-certificate
+  name: {{ .Values.tls.domain }}-wilduck-certificate
   labels:
     {{- include "wildduck.wildduck.labels" . | nindent 4 }}
 spec:
