Fix the secret naming

--- a/wildduck/templates/wildduck/certificate.yaml
+++ b/wildduck/templates/wildduck/certificate.yaml
@@ -10,5 +10,5 @@ spec:
   issuerRef:
     kind: ClusterIssuer
     name: letsencrypt-cluster-issuer
-  secretName: {{.Values.wildduck.tlsDomain }}-wildduck
+  secretName: {{.Values.tls.domain }}-wildduck
 
