--- a/wildduck/templates/haraka/deployment.yaml
+++ b/wildduck/templates/haraka/deployment.yaml
@@ -34,7 +34,10 @@ spec:
           imagePullPolicy: {{ .Values.haraka.image.pullPolicy }}
           ports:
             - name: smtp 
-              containerPort: {{.Values.haraka.service.port}}
+              containerPort: {{.Values.haraka.service.smtpPort}}
+              protocol: TCP
+            - name: smtps
+              containerPort: {{.Values.haraka.service.smtpsPort}}
               protocol: TCP
           livenessProbe:
             tcpSocket:
