Change certs volume to the correct one

--- a/wildduck/templates/wildduck/deployment.yaml
+++ b/wildduck/templates/wildduck/deployment.yaml
@@ -70,7 +70,7 @@ spec:
           - name: {{ include "wildduck.wildduck.fullname" . }}-config-volume
             mountPath: /wildduck/config
           {{ if .Values.tls.enabled }}
-          - name: {{ include "wildduck.wildduck.fullname" . }}-config-volume
+          - name: {{ include "wildduck.wildduck.fullname" . }}-cert-volume
             mountPath: /opt/certs/
           {{ end }}
       volumes:
