--- a/wildduck/templates/haraka/deployment.yaml
+++ b/wildduck/templates/haraka/deployment.yaml
@@ -57,7 +57,7 @@ spec:
           - name: {{ include "wildduck.haraka.fullname" . }}-dkim-config-volume
             mountPath: /app/config/dkim
           {{ if .Values.tls.enabled }}
-          - name: {{ include "wildduck.haraka.fullname" . }}-config-volume
+          - name: {{ include "wildduck.haraka.fullname" . }}-cert-volume
             mountPath: /opt/certs/
           {{ end }}
       volumes:
