--- a/wildduck/templates/zonemta/configmap.interfaces.yaml
+++ b/wildduck/templates/zonemta/configmap.interfaces.yaml
@@ -27,13 +27,15 @@ data:
     maxRecipients=1000
 
     # Set to true to enable STARTTLS. Do not forget to change default TLS keys
-    starttls=false
+    starttls={{ .Values.tls.enabled }}
 
     # set to true to start in TLS mode if using port 465
     # this probably does not work as TLS support with 465 in ZoneMTA is a bit buggy
-    secure=false
+    secure={{ .Values.tls.enabled }}
 
     # define keys for STARTTLS/TLS. These paths are relative to CWD
     # NB! Keys must be accessible by process user or SMTP authentication will fail.
-    #key="./keys/example.com-key.pem"
-    #cert="./keys/example.com-cert.pem"
+    {{ if .Values.tls.enabled }}
+    key="/opt/certs/tls.key"
+    cert="/opt/certs/tls.crt"
+    {{ end }}
