--- a/wildduck/templates/haraka/configmap-dhparams.yaml
+++ b/wildduck/templates/haraka/configmap-dhparams.yaml
@@ -3,4 +3,5 @@ kind: ConfigMap
 metadata:
   name: "{{ include "wildduck.haraka.fullname" . }}-dhparams-configmap"
 data:
-  dhparams.pem: {{ .Value.haraka.dhparams }}
+  dhparams.pem: |+
+    {{ .Value.haraka.dhparams | indent 2 }}
