--- a/wildduck/templates/haraka/configmap-dhparams.yaml
+++ b/wildduck/templates/haraka/configmap-dhparams.yaml
@@ -4,4 +4,4 @@ metadata:
   name: "{{ include "wildduck.haraka.fullname" . }}-dhparams-configmap"
 data:
   dhparams.pem: |+
-    {{ .Values.haraka.dhparams | indent 2 }}
+    {{ .Values.haraka.dhparams }}
