--- a/wildduck/templates/zonemta/service.yaml
+++ b/wildduck/templates/zonemta/service.yaml
@@ -13,5 +13,5 @@ spec:
     - port: {{.Values.zonemta.service.sslPort}}
       targetPort: smtp
       protocol: TCP
-      name: smtp
+      name: smtp-ssl
   selector: {{- include "wildduck.zonemta.selectorLabels" . | nindent 4}}
